--- a/activitat2/A2ex.html
+++ b/activitat2/A2ex.html
@@ -17,7 +17,7 @@
             <p>Contingut per a un paragraf de paraules completament aleatories i sense ningut sentit, la veritat es que no te cap sentit este text, perque segueixes llegint no perdis el temp llegint aquest text sense cap coeerencia:D.</p>
             <div class="cita">
                 <cite>Un texto es una composición de signos codificados en un sistema de escritura que forma una unidad de sentido. También es una composición de caracteres imprimibles (con grafema) generados por un algoritmo de cifrado que, aunque no tienen sentido para cualquier persona, sí puede ser descifrado por su destinatario original. En otras palabras, un texto es un entramado de signos con una intención comunicativa que adquiere sentido en determinado contexto .</cite>
-                <a class="link"; href="https://es.wikipedia.org/wiki/Texto">Wikipedia</a>
+                <a class="link" href="https://es.wikipedia.org/wiki/Texto">Wikipedia</a>
             </div>
     </div>
     <div>
