--- a/activitat2v3/serie-llistat-arcs.html
+++ b/activitat2v3/serie-llistat-arcs.html
@@ -21,5 +21,100 @@
         
        </nav>
     </div>
+        <h1 id="Titol_llistes">Llistat d'arcs argumentals</h1>
+    <div id="div_llistes">
+        <div class="listas_sagas">
+            <ol>
+                <h3> <img src="img/icono-cine.png" alt=""> Saga de l'East Blue </h3>
+                <li>Arc Romance Dawn </li>
+                <li>Arc Payaso Buggy </li>
+                <li>Arc d'en Kuro </li>
+                <li>Arc Restaurant Baratie </li>
+                <li>Arc Arlong Park </li>
+                <li>Arc Loguetown </li>
+                <li>Arc Drac Mil·lenari </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Arabasta </h3>
+                <li>Arc Reverse Mountain </li>
+                <li>Arc Whiskey Peak </li>
+                <li>Arc Little Garden </li>
+                <li>Arc de Drum </li>
+                <li>Arc d'Arabasta </li>
+                <li>Arc Reverse Mountain </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Sky Island </h3>
+                <li>Arc illa de les cabres</li>
+                <li>Arc Ruluka Island </li>
+                <li>Arc de Jaya </li>
+                <li>Arc Skypiea </li>
+                <li>Arc G8</li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Water 7 </h3>
+                <li>Arc Long Ring Long Land </li>
+                <li>Arc Ocean's Dream </li>
+                <li>Arc Foxy's Return </li>
+                <li>Almirant Aokiji </li>
+                <li>Arc Water7 </li>
+                <li>Arc Enies Lobby </li>
+                <li>Arc Post-Enies </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Thriller Bark </h3>
+                <li>Arc Ice Hunter </li>
+                <li>Arc Thriller Bark </li>
+                <li>Arc Spa Island/li> </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Guerra de Marineford </h3>
+                <li>Arc de Duval </li>
+                <li>Arc Sabaody </li>
+                <li>Arc Amazon Lily </li>
+                <li>Arc Impel Down </li>
+                <li>Arc Marine Ford </li>
+                <li>Arc el passat de Ruffy </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Gyojin Island </h3>
+                <li>Arc retorn a Sabaody </li>
+                <li>Arc Illa Gyojin </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga  Dressrosa</h3>
+                <li>Arc Ambició de Z </li>
+                <li>Arc Punk Hazard </li>
+                <li>Arc Dressrosa </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Whole Cake Island </h3>
+                <li>Arc Silver Mine </li>
+                <li>Arc de Zou </li>
+                <li>Arc Whole Cake Island </li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga País de Wano </h3>
+                <li>Arc del Levely </li>
+                <li>Arc País de Wano-1</li>
+                <li>Arc País de Wano-2</li>
+                <li>Arc el passat de Uta</li>
+                <li>Arc País de Wano-3</li>
+            </ol>
+            <ol>
+                <h3><img src="img/icono-cine.png" alt="">Saga Final</h3>
+                <li>Arc Egghead</li>
+            </ol>
+        </div>
+        <img id="imatge_llistes" src="img/one-piece-c0pujiakubq5rwas.jpg" alt="imatge">     
+    </div>
 </body>
+<footer>
+    <a href="https://fandom.com">
+        <img src="img/fandom20-footer-logo.webp" alt="">
+    </a>
+    <a href="https://one-piece.com/index.html">
+        <img src="img/logo_onepiece.png" alt="">
+    </a>
+</footer>
 </html>
