--- a/activitat2v3/serie-personatges.html
+++ b/activitat2v3/serie-personatges.html
@@ -18,8 +18,81 @@
         <li><a href="serie-personatges.html">Personatges</a></li>
         <li><a href="serie-llistat-arcs.html">Arcs de la serie</a></li>
         </ul>
-        
        </nav>
     </div>
+
+    <div>
+        <h3>Llistat tripulació del Barret de Palla</h3>
+        <div class="personatges">
+            <h4>Monkey D. Ruffy</h4>
+            <p class="paragrafs">El capità, conegut pel sobrenom de "Ruffy Barret de Palla". El seu objectiu és convertir-se en el Rei dels Pirates, trobant el tresor llegendari deixat per l'antic Rei dels Pirates Gol D. Roger. Va menjar la fruita "Gomu Gomu no Mi" cosa que el converteix en un home de goma. Surt del seu poble al East Blue i emprèn un viatge a través de la Grand Line, reunint una tripulació al seu voltant coneguda com els Pirates del Barret de Palla que s'enfronta a nombrosos enemics. És una noi amant de la diversió i alegre amb una gran ambició i una gran gana.</p>
+            <img class="imatges_personatges" src="img/Ruffy_abans_Timeskip.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Monkey_D._Luffy">Sabre-ne més...</a>
+            </div>    
+            <h4>Roronoa Zoro</h4>
+            <p class="paragrafs">Va ser el primer membre que es va unir als Pirates del Barret de Palla i està considerat la pitjor amenaça i el membre més perillós després d'en Ruffy. És un dels tres millors lluitadors de la tripulació, juntament amb en Ruffy i en Sanji, i el seu somni és convertir-se en el millor espadatxí del món. Gairebé sempre porta al seu costat les seves tres espases. S’ha entrenat des de la infància en l'ús de l'espasa, desenvolupant un estil de lluita únic de tres espases, que en té una amb la boca.</p>
+            <img class="imatges_personatges" src="img/Zoro's_Common_Outfit.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Roronoa_Zoro">Sabre-ne més...</a>
+            </div>    
+            <h4>Nami</h4>
+            <p class="paragrafs">Amb el sobrenom de "Gata Lladre", és l'oficial dels Pirates del Barret de Palla. Va ser el tercer membre de la tripulació i la segona a unir-s'hi. Va ser membre dels Pirates de l'Arlong i inicialment es va unir als Pirates del Barret de Palla per robar-los. El seu somni és dibuixar un mapa de tot el món. Posseeix un bastó creat per l'Usopp que usa com a arma, conegut com Sorcery Clima-Tact, que li permet controlar els diversos elements del clima. </p>
+            <img class="imatges_personatges" src="img/Nami's_Reverse_Mountain_Outfit.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Nami">Sabre-ne més...</a>
+            </div>    
+            <h4>Usopp</h4>
+            <p class="paragrafs">És el franctirador dels Pirates del Barret de Palla. És el quart membre de la tripulació i el tercer en unir-s'hi. El seu somni és arribar a ser un gran pirata com el seu pare Yasopp, tripulant de la banda de pirates de Shanks "el Pèl-roig". És el responsable que la banda de Luffy obtingués el vaixell Going Merry. És un cobard, un mitòman i mentider compulsiu.</p>
+            <img class="imatges_personatges" src="img/Usopp_Anime_Pre_Timeskip_Infobox.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Usopp">Sabre-ne més...</a>
+            </div>  
+            <h4>Vinsmoke Sanji</h4>
+            <p class="paragrafs">Inicialment cuiner al restaurant flotant Baratie, Sanji s’uneix als pirates del Barret de Palla com el cuiner de la tripulació, encoratjat pels seus col·legues i el seu mentor Zeff a posar-se a la mar per perseguir el seu somni. Trobar el llegendari All Blue. Per conservar les mans per cuinar, lluita només utilitzant les cames. Fumador àvid, és extremadament galant i atret pel sexe més net.</p>
+            <img class="imatges_personatges" src="img/Sanji_Post-Timeskip.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Sanji">Sabre-ne més...</a>
+            </div>  
+            <h4>Chopper</h4>
+            <p class="paragrafs">És el metge dels Pirates de Barret de Palla. És un ren de nas blau que va menjar la fruita Hito Hito, adquirint forma i intel·ligència humana. Procedent de l'illa de Drum, és el sisè membre de la tripulació i el cinquè a unir-s'hi al final de l'arc de Drum. </p>
+            <img class="imatges_personatges" src="img/Chopper.jpg" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Tony_Tony_Chopper">Sabre-ne més...</a>
+            </div>  
+            <h4>Nico Robin</h4>
+            <p class="paragrafs">També coneguda com la Nena Dimoni. És l' arqueòloga dels Pirates de Barret de Palla, és el setè membre de la tripulació i el sisè a unir-se, fent-ho al final de l'arc d'Arabasta. Va deixar temporalment la tripulació durant l'arc de Water7, però es va reincorporar durant l'arc d'Enies Lobby. El seu somni és conèixer la veritable història investigant en els poneglyphs. Va consumir la fruita Hana Hana que li brinda al seu consumidor la capacitat de "florir" qualsevol part del seu cos en qualsevol superfície.</p>
+            <img class="imatges_personatges" src="img/Nico_Robin_Anime_Infobox.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Nico_Robin">Sabre-ne més...</a>
+            </div>  
+            <h4>Franky</h4>
+            <p class="paragrafs">Sobrenomenat l'Home de Ferro, és el fuster naval dels Pirates de Barret de Palla i un dels oficials principals de la Gran Flota de Barret de Palla. És el vuitè membre de la tripulació i el setè a unir-se, fent-ho al final de l'arc de retorn a Water7. Originari del South Blue, Franky va ser un membre dels Tom's Workers, fins que un incident que va danyar el seu cos li va requerir convertir-se en un cyborg per curar-se. Posteriorment es convertiria en el líder de la família Franky.</p>
+            <img class="imatges_personatges" src="img/Franky_OnePiece.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Franky">Sabre-ne més...</a>
+            </div>  
+            <h4>Brook</h4>
+            <p class="paragrafs">També conegut com "Soul King". És el músic dels Pirates de Barret de Palla i un dels seus dos espadatxins. És el novè membre de la tripulació i el vuitè a unir-se, fent-ho al final de l'arc de Thriller Bark. Originari del West Blue, Brook va exercir de guàrdia reial d'un regne, i posteriorment es faria membre dels Pirates Rumbar. Va morir i va ressuscitar gràcies al poder de la seva fruita Yomi Yomi. No obstant això, degut al temps que va trigar la seva ànima a trobar el seu cos, va quedar reduït a un esquelet. Va aprendre amb el temps a aprofitar més profundament els poders de la seva fruita del Diable, donant-li un control significatiu sobre la seva pròpia ànima i les ànimes dels altres.</p>
+            <img class="imatges_personatges" src="img/Brook.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Brook">Sabre-ne més...</a>
+            </div>  
+            <h4>Jinbe</h4>
+            <p class="paragrafs">El Cavaller del Mar Jinbe és el timoner dels Pirates de Barret de Palla i un dels oficials principals de la Gran Flota de Barret de Palla, sent el desè membre de la tripulació i el novè a unir-se. És un gyojin tauró balena, que va servir com a antic capità dels Pirates del Sol i com a membre dels Set Senyors de la Guerra del Mar (Shichibukai). Durant la guerra de Marineford va fer amistat amb Monkey D. Ruffy, més tard s’alià amb ell i finalment és convidat a unir-se a la tripulació al final de l’arc de Whole Cake Island.</p>
+            <img class="imatges_personatges" src="img/Jinbe_Anime_Dos_A_os_Despu_s_Infobox.webp" alt="">
+            <div class="link_presonatges">
+                <a class="link" href="https://onepiece.fandom.com/es/wiki/Jinbe">Sabre-ne més...</a>
+            </div>  
+        </div>
+    </div>
 </body>
+<footer>
+    <a href="https://fandom.com">
+        <img src="img/fandom20-footer-logo.webp" alt="">
+    </a>
+    <a href="https://one-piece.com/index.html">
+        <img src="img/logo_onepiece.png" alt="">
+    </a>
+</footer>
 </html>
